feat: add swagger ui to /docs add delete and put
