# swagger.json
@@ -1,11 +1,159 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Based Mobies Database API",
+        "title": "Based Movies Database API",
         "contact": {
             "email": "leona202307@proton.me"
         },
         "version": "1.0.0"
+    },
+    "components": {
+        "schemas": {
+            "Movie": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "description": "The unique identifier for the movie."
+                    },
+                    "uid": {
+                        "type": "string",
+                        "description": "A UID for the movie."
+                    },
+                    "title": {
+                        "type": "string",
+                        "description": "The title of the movie."
+                    },
+                    "year": {
+                        "type": "string",
+                        "description": "The year the movie was released."
+                    },
+                    "released": {
+                        "type": "string",
+                        "description": "The release date of the movie."
+                    },
+                    "runtime": {
+                        "type": "string",
+                        "description": "The duration of the movie in minutes."
+                    },
+                    "genre": {
+                        "type": "string",
+                        "description": "The genre of the movie."
+                    },
+                    "director": {
+                        "type": "string",
+                        "description": "The director of the movie."
+                    },
+                    "actors": {
+                        "type": "string",
+                        "description": "The actors in the movie."
+                    },
+                    "country": {
+                        "type": "string",
+                        "description": "The country where the movie was produced."
+                    },
+                    "poster": {
+                        "type": "string",
+                        "description": "The URL to the movie's poster image."
+                    },
+                    "imdb": {
+                        "type": "string",
+                        "description": "The IMDb rating of the movie."
+                    },
+                    "type": {
+                        "type": "string",
+                        "description": "The type of content (e.g., 'movie')."
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "description": "The date and time when the movie record was created."
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "description": "The date and time when the movie record was last updated."
+                    },
+                    "overview": {
+                        "type": "string",
+                        "description": "A brief overview or summary of the movie's plot."
+                    },
+                    "imdb_id": {
+                        "type": "string",
+                        "description": "The IMDb ID of the movie."
+                    }
+                }
+            },
+            "MovieInput": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "description": "The unique identifier for the movie."
+                    },
+                    "uid": {
+                        "type": "string",
+                        "description": "A UID for the movie."
+                    },
+                    "title": {
+                        "type": "string",
+                        "description": "The title of the movie."
+                    },
+                    "year": {
+                        "type": "string",
+                        "description": "The year the movie was released."
+                    },
+                    "released": {
+                        "type": "string",
+                        "description": "The release date of the movie."
+                    },
+                    "runtime": {
+                        "type": "string",
+                        "description": "The duration of the movie in minutes."
+                    },
+                    "genre": {
+                        "type": "string",
+                        "description": "The genre of the movie."
+                    },
+                    "director": {
+                        "type": "string",
+                        "description": "The director of the movie."
+                    },
+                    "actors": {
+                        "type": "string",
+                        "description": "The actors in the movie."
+                    },
+                    "country": {
+                        "type": "string",
+                        "description": "The country where the movie was produced."
+                    },
+                    "poster": {
+                        "type": "string",
+                        "description": "The URL to the movie's poster image."
+                    },
+                    "imdb": {
+                        "type": "string",
+                        "description": "The IMDb rating of the movie."
+                    },
+                    "type": {
+                        "type": "string",
+                        "description": "The type of content (e.g., 'movie')."
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "description": "The date and time when the movie record was created."
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "description": "The date and time when the movie record was last updated."
+                    },
+                    "overview": {
+                        "type": "string",
+                        "description": "A brief overview or summary of the movie's plot."
+                    },
+                    "imdb_id": {
+                        "type": "string",
+                        "description": "The IMDb ID of the movie."
+                    }
+                }
+            }
+        }
     },
     "paths": {
         "/movies": {
@@ -44,7 +192,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/MovieInput"
+                                "$ref": "#/components/schemas/Movie"
                             }
                         }
                     }
@@ -101,6 +249,55 @@
                 }
             }
         },
+        "/movies/{uid}": {
+            "get": {
+                "tags": [
+                    "Movies"
+                ],
+                "summary": "Read a specific movie by UID",
+                "description": "Read a specific movie by its UID.",
+                "operationId": "cb8a226f85595080b81d693f021f98bf",
+                "parameters": [
+                    {
+                        "name": "uid",
+                        "in": "path",
+                        "description": "Movie UID",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Movie"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Movie not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Movie not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/movies/{id}": {
             "put": {
                 "tags": [
@@ -132,6 +329,170 @@
                 },
                 "responses": {
                     "201": {
+                        "description": "Movie updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Movie updated successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input data",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Invalid input data"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Movie not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Movie not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to update movie",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Failed to update movie"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Movies"
+                ],
+                "summary": "Delete a movie by ID",
+                "description": "Delete a movie by ID.",
+                "operationId": "45a113fcd5e867d6ea584293486ea362",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Movie ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Movie deleted successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Movie deleted successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Movie not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Movie not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to delete movie",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Failed to delete movie"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "Movies"
+                ],
+                "summary": "Patch/update a movie by ID",
+                "description": "Patch/update a movie by ID.",
+                "operationId": "3edacbad4758c0983367dd2f0f97c5a9",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Movie ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/MovieInput"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
                         "description": "Movie updated successfully",
                         "content": {
                             "application/json": {
